# sentiment-mlops

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml
models/: important_features.json  sentiment_model.joblib  vectorizer.joblib
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: dashboard.yml
notebooks/: 01_data_exploration.ipynb
src/api/: main.py
src/models/: sentiment_model.py
src/train/: train.py
